Training docs/Assignment8/Trial/src/objects/Salary__c.object
<CustomObject>
	<fields>
		<fullName>Bank_Account_Number__c</fullName>
		<description>Displays the Bank Account Number.</description>
		<inlineHelpText>Please enter the Bank Account Number.</inlineHelpText>
		<label>Bank Account Number</label>
		<length>25</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Bank_Details__c</fullName>
		<description>Displays the bank Detail.</description>
		<inlineHelpText>Please enter the bank Detail.</inlineHelpText>
		<label>Bank Details</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Basics__c</fullName>
		<description>Display the Basic Salary.</description>
		<inlineHelpText>Please Enter Your Basic Salary.</inlineHelpText>
		<label>Basic</label>
		<precision>12</precision>
		<required>true</required>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Credited_To__c</fullName>
		<description>Displays the Information Of Credited person.</description>
		<inlineHelpText>Please Enter the Employee ID On whose account the
			salary is credited.</inlineHelpText>
		<label>Credited To</label>
		<referenceTo>Employee__c</referenceTo>
		<relationshipLabel>Salarys</relationshipLabel>
		<relationshipName>Salarys</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>Gross_Salary__c</fullName>
		<description>Displays the Gross Salary.</description>
		<formula>Total_Earnings__c - PF_Deduction__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Please enter the Gross Salary.</inlineHelpText>
		<label>Gross Salary</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>HRA__c</fullName>
		<description>Displays the HRA Details.</description>
		<inlineHelpText>Please Enter the HRA Details.</inlineHelpText>
		<label>HRA</label>
		<precision>12</precision>
		<required>true</required>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Mode_of_Payment__c</fullName>
		<description>Displays the Mode of Payment.</description>
		<inlineHelpText>Please Select The Mode of Payment.</inlineHelpText>
		<label>Mode of Payment</label>
		<picklist>
			<picklistValues>
				<fullName>RTGS</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>NEFT</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Cheque</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Cash</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>PF_Deduction__c</fullName>
		<description>Displays the Details of the PF Deduction.</description>
		<inlineHelpText>Please Enter the Details of the PF.</inlineHelpText>
		<label>PF Deduction</label>
		<precision>12</precision>
		<required>true</required>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Salary_Credit_Date__c</fullName>
		<label>Salary Credit Date</label>
		<required>true</required>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Special_Allowance__c</fullName>
		<label>Special Allowance</label>
		<precision>12</precision>
		<required>true</required>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_Earnings__c</fullName>
		<formula>Basics__c + HRA__c + Special_Allowance__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Total Earnings</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>Salary</label>
	<nameField>
		<displayFormat>SAL-{000000}</displayFormat>
		<label>Salary ID</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Salarys</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
	<validationRules>
		<fullName>BAnk_account</fullName>
		<active>true</active>
		<errorConditionFormula>ISCHANGED( Bank_Account_Number__c )</errorConditionFormula>
		<errorMessage>Bank Account No can Not Be Chaged</errorMessage>
	</validationRules>
	<validationRules>
		<fullName>Banking</fullName>
		<active>true</active>
		<errorConditionFormula>ISBLANK( Bank_Details__c )</errorConditionFormula>
		<errorDisplayField>Bank_Details__c</errorDisplayField>
		<errorMessage>Bank detail field cant be blank.</errorMessage>
	</validationRules>
	<validationRules>
		<fullName>Salary_Record</fullName>
		<active>true</active>
		<description>It shows how salary record cant be generated if Employee
			is inactive.</description>
		<errorConditionFormula>IF( Credited_To__r.Is_Active__c = False,True,
			False)</errorConditionFormula>
		<errorMessage>Salary cannot be processed for inactive employees.</errorMessage>
	</validationRules>
</CustomObject>